<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".System_classes.MainActivity">

    <include layout="@layout/content_main"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
            <!--android:background="?attr/colorPrimary"-->

        </android.support.design.widget.AppBarLayout>
        <Button
                android:id="@+id/listofdirectory"
                android:layout_gravity="center|center_horizontal"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:text="@string/formare_list_of_directory"
                android:onClick="listOfDirectoryOnClick" tools:text="Справочники"/>
        <Button
                android:id="@+id/listofdocuments"
                android:layout_gravity="center|center_horizontal"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:text="@string/formare_list_of_documents"
                android:onClick="listOfDocumentsOnClick" tools:text="Документы"/>
        <Button
                android:id="@+id/listofreports"
                android:layout_gravity="center|center_horizontal"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:text="@string/formare_list_of_reports"
                android:onClick="listOfReportsOnClick" tools:text="Отчеты"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>