<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".User_interface.CommonForms.UserInterface_FormareListOfSettings"
        android:orientation="horizontal">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.AppBarOverlay"/>

        </android.support.design.widget.AppBarLayout>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginBottom="5dp" android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginStart="5dp"
                android:layout_marginTop="5dp">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/text_databasename_settingsform"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content" android:id="@+id/ldatabasename"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/databasename"
                        android:inputType="text" android:editable="false"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/text_prefthis_settingsform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/lprefthis"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/prefthis"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/text_prefcor_settingsform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/lprefcor"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/prefcor"/>
            </TableRow>
            <TableRow android:layout_width="279dp" android:layout_height="wrap_content">
                <TextView
                        android:text="TextView"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" android:id="@+id/textView5"
                        android:visibility="invisible"/>
                <Button
                        android:text="@string/text_changesettings_settingsform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button"
                        android:onClick="changeSettings" tools:text="Изменить настройки"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>